fix: hero cta button glow overflow getting cut off

--- a/src/sections/hero/hero.module.scss
+++ b/src/sections/hero/hero.module.scss
@@ -8,7 +8,6 @@
     flex-direction: column;
     justify-content: center;
     position: relative;
-    overflow-x: hidden;
 
     .container {
         position: relative;
@@ -95,6 +94,7 @@
         opacity: 0.08;
         z-index: -10;
         display: inline-block;
+        word-wrap: anywhere;
 
         @include mixins.respond(tab-port) {
             font-size: 16rem;
